--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -29,6 +29,7 @@ AME_DS_Provisional:0 "Provisional Congress"
 PB_AME_Nicaragua_Occupation:0 "Nicaraguan Pacification Command"
 PB_AME_Nicaragua_Occupation_desc:0 "\n\n\n\n\n\nNicaragua at this current time is an occupied nation. While it was originally to receive a generous 3% of canal profits, this was not enough for the Estrada government. With the consent of London, the Commonwealth armed a coalition of interned Dixie insurrectionists and turned them loose to topple Estrada. The decision has given us sufficient plausible deniability to effectively occupy the country, while using the insurrectionists as a cover. In Nicaragua, the people are increasingly unruly under American control, further complicating security around the Canal Zone. The American public is currently unaware of the extent of the occupation, but the bloodier things get and the longer the operation carries on, the more likely that someone catches on.\n\nCurrently, there are two active insurrectionist groups following the collapse of the Sandinistas in October. The §OZeledonistas§! represent the democratic opposition, primarily lead by the aging general Benjamín Zeledón.\nThe §bFederalistas§! represent a coalition of Central American generals, motivated by grand ambition and profit to restore the formerly unified Central American Republic.\n\nWe must stabilize Nicaragua by keeping both resistance factions from overtaking the American Occupation Administration. If §rDespotist popularity drops below 10%§!, Stephenson's government will be in danger of being §roverthrown§!. Should this happen, Nicaragua will break free and potentially attempt to re-occupy the canal zone, severely stalling progress.\n\n§YThe Stephenson Government's§! Popularity is currently at §Y[?NIC.party_popularity@ds|%]§!\n§OZeledonista§! Popularity is currently at §O[?NIC.party_popularity@lb|%]§!\n§bFederalista§! Popularity is currently at §b[?NIC.party_popularity@rc|%]§!\n"
 
+PB_Eliminate_the_Insurgencies:0 "Eliminate the Insurgencies"
 AME_Nicaraguan_Government_Collapse:0 "Impending Government Collapse"
 AME_Zeledonista_Rebel_Attack:0 "Zeledonisa Rebels Strike"
 AME_Federalista_Rebel_Attack:0 "Federalista Rebels Strike"
@@ -1104,6 +1105,13 @@ Unicom_Elections.3.b:0 "The Progressives finally get a win."
 Unicom_Elections.3.c:0 "Lang and the Workers all the way!"
 Unicom_Elections.3.e:0 "It's time for an alternative in office."
 
+Unicom_Elections.4.t:0 "The [GetYear] Elections"
+Unicom_Elections.4.d:0 ""
+Unicom_Elections.4.a:0 "The Federal-Unionists"
+Unicom_Elections.4.b:0 "The Progressives"
+Unicom_Elections.4.c:0 "The National Workman's Party"
+Unicom_Elections.4.e:0 "The Social Credit Party"
+
 Unicom_Conservatives.1.t:0 "The Federal-Unionist Party Congress"
 Unicom_Conservatives.1.d:0 ""
 Unicom_Conservatives.1.a:0 "We need to work with the Jersey Clique!"
@@ -1152,6 +1160,31 @@ Unicom_Socialists.5.d:0 ""
 Unicom_Socialists.5.a:0 "Jack Lang"
 Unicom_Socialists.5.b:0 "James M. Cox"
 Unicom_Socialists.5.c:0 "J.S Woodsworth"
+
+Unicom_Socialists.6.a:0 "Lang proposes the United Front"
+Unicom_Socialists.6.d:0 "Following his victory in the parliamentary leadership election, Jack Lang has proposed to form a United Front with the radicals of the National Workman's party, arguing that these elements must become part of a single unified front against the EIEC and the threat of international capital.\n\nThe proposal has been met with some criticism by the moderates, who feel that capitulating to the closet republicans in the party might play poorly with the public."
+Unicom_Socialists.6.a:0 "We'll work together, sure."
+Unicom_Socialists.6.b:0 "No thanks."
+
+Unicom_Socialists.7.t:0 "Determining the Next Prime Minister"
+Unicom_Socialists.7.d:0 "With the Workman's Party succeeding in the parliamentary election, the time has come to choose a new prime minister. The Lang Labour faction has, unsurprisingly, nominated Jack Lang for the posting.\n\nThe Moderate faction, instead, has opted to nominate labour leader Bob Semple for the posting. Semple isn't a particularly inspiring leader, but perhaps the party needs someone unremarkable for the role. On the other hand, New Englander George Aiken has been proposed as an independent compromise candidate. Aiken's credentials as MP for the Vermont Province are quite significant, and his appointment could quell unrest from both the moderates and radicals."
+Unicom_Socialists.7.a:0 "Jack Lang"
+Unicom_Socialists.7.b:0 "Bob Semple"
+Unicom_Socialists.7.c:0 "George Aiken"
+
+Unicom_Socialists.8.t:0 "Lang's Supporters Mobilize"
+Unicom_Socialists.8.d:0 "Riding high off his second term as Prime Minister, Jack Lang and his supporters have practically overrun the National Workman's Party. While the moderate faction continues to exist in theory, in truth Lang has stuffed most of the party leadership with his stooges. The Moderates find themselves isolated, and few realize the extent of Lang's ambitions to push his policies.\n\nAfter the announcement that Lang would be re-elected, his supporters took to the streets in droves to pour out their support. Lang himself has instead opted to begin mobilizing his support within the party, claiming that there is now a historic opportunity to achieve a true victory for the American workers. The remaining moderates have a choice to either throw their lot in with Lang and hope for the best, or use their last ounce of power to eject him from power."
+Unicom_Socialists.8.a:0 "The Party stands by him"
+Unicom_Socialists.8.b:0 "We have to stop this madness!"
+
+Unicom_Socialists.9.t:0 "Lang seeks the support of the Military"
+Unicom_Socialists.9.d:0 "Following a narrow vote, Lang was removed as Prime Minister and replaced with moderate candidate Bob Semple. Lang has taken this fact poorly, to say the least, and has taken to rallying his supporters against the new government. The other parties have denounced the so-called coup as undemocratic, claiming Lang's victory in the leadership election should be respected.\n\nLike the Bonus Brigades, Lang's supporters have taken to effectively occupying the American capital to protest and demand that he be returned to office. More concerningly, elements of the royal army have stepped up to declare that they view the intervention of the party moderates to also be undemocratic. If Lang's influence has spread far enough for the military to break their historically apolitical nature, then this could spell doom for the recently appointed Semple ministry."
+Unicom_Socialists.9.a:0 "Public pressures Semple into resignation"
+Unicom_Socialists.9.b:0 "The military refuses to intervene in politics"
+
+Unicom_Socialists.10.t:0 "The Big Fella"
+Unicom_Socialists.10.d:0 "In a fiery speech in Philadelphia, Prime Minister Lang proclaimed his victory over the reactionary moderates of the Workman's Party. Semple has been ousted from power, and Lang was sworn into office to the deafening applause of the American people. Building off this, he has announced that he will be breaking with the Workman's Party and forming the Lang Labour Party, the popularity of the latter leading to the almost instantaneous collapse of the former. Lang's popularity has grown so vast and become so deeply ingrained that few politicians are now able to challenge his authority.\n\nWith the Lang Labour party now monopolizing the political scene and Lang's support having ingrained itself even into the military, the United Commonwealth is now in effect a party state. Lang Labour dominates the polls, and while there remains some organized political resistance, Jack Lang is now indisputably the most powerful man in America, and he now wields the power to keep it that way."
+Unicom_Socialists.10.a:0 "One America, for the Workers"
 
 Unicom_SoCreds.1.t:0 "Second Social Credit Congress"
 Unicom_SoCreds.1.d:0 ""
