The loc is finally done please end my suffering

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1122,7 +1122,7 @@
   SCA_The_Portland_Compromise_tt:0 "\n§gShould§! [TAC.getflag] §YNew Virginia§! §gagree to our demands we will annex them and gain all their generals and divisions§!"
   SCA_Similar_Peoples_Similar_Goals_tt:0 "\n§gShould§! [NWA.getflag] §YNew Walden§! §gagree to our demands we will annex them and gain all their generals and divisions§!"
   
-  SCA_The_Butlerite_Proclamation_tt:0 "Smedley Butler will be given full dictatorial powers and Congress will be sidelined. This path will eventually lead to the formation of the §YNorth American Peasants and Workers Republic§!.\n\n"
+  SCA_The_Butlerite_Proclamation_tt:0 "Smedley Butler will be given full dictatorial powers and Congress will be sidelined. This path will eventually lead to the formation of the §YNorth American Union§!.\n\n"
   SCA_Dawn_Of_The_Peoples_Council_tt:0 "\nCongress will achieve total control and Butler will be the first American President, his term will end with the unification of America . This path will eventually lead to the formation of the §YUnited States§!.\n\n"
 
   SCA210tooltip:0 "\nNew §YMinisters§! unique to your political path will be unlocked and will be available for Selection\n\nThese §YMinister§! are as follows:\n\n"
