--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -379,7 +379,7 @@ PB_Plutocrats:0 "Plutocrat"
 # LEADER TRAITS
 ##########################
 PB_Authoritarian_Sympathies:0 "Authoritarian Sympathies"
-PB_Puppet_King:0 "Puppet King"
+PB_Puppet_King:0 "Puppet Queen"
 PB_Empress_Eternal:0 "Empress Eternal"
 PB_Germanophile:0 "Germanophile"
 
