some other minor fixes

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -2040,7 +2040,7 @@
 
   britain_postwar.4.t:0 "The Richmond Compromise" # Doesn't need loc
   britain_postwar.4.d:0 ""
-  britain_postwar.4.a:0 "I love liberty"Albert
+  britain_postwar.4.a:0 "I love liberty"
 
   britain_postwar.5.t:0 "The Borealian Confederation" # Doesn't need loc
   britain_postwar.5.d:0 ""
