--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -874,7 +874,7 @@
   ##########################
   # TOOLTIPS
   ##########################
-  PB_ENG_George_Dead_tooltip:0 "§YKing George V has died§!"
+  PB_ENG_George_Dead_tooltip:0 "§YGovernor General George has died§!"
   PB_ENG_1934_Congress_Commenced:0 "§YThe 1934 Imperial Confederation Congress has begun§!"
   ENG_Great_Slump_Over_tooltip:0 "§YBritain has recovered from the Great Slump§!"
   PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
@@ -1864,7 +1864,7 @@
   britain.2008.a:0 "Are we cool yet?"
   britain.2008.b:0 "What drivel"
 
-  britain.2009.t:0 "The Royal Marriage of Prince"
+  britain.2009.t:0 "The Royal Marriage of Prince Edward"
   britain.2009.d:0 "Dignitaries from across Europe arrived in London today to celebrate the royal marriage of Prince Edward to Helen von Hohenzollern. One of several princesses of Prussia, Helens marriage to the British prince further cements the ties between the British royal family and Germany.\n\nWhile not a member of Germanys ruling royal family, the Habsburgs, Helens descendance from the Hohenzollern family of Brandenburg-Prussia is no less prestigious. More importantly, the Hohenzollerns Protestantism is much less of a barrier to a royal marriage than the Catholic Habsburgs."
   britain.2009.a:0 "As if the Royal Family wasn't already German enough."
 
@@ -2083,6 +2083,8 @@
 
   CoF_Prince_George:0 "Governor General - Prince George"
   CoF_Prince_George_desc:0 "The §YCouncil of Five§! is an unofficial government system within the British Empire established under the reign of Queen-Empress Victoria. While previously Commonwealth Governor Generals were appointed under advisement from London, it became unofficial policy to place Victoria's growing number of grandchildren across the Empire. This was done as a means to both curtail any upstart princes, as well as to foster a greater familial imperial identity. Though they only carry so much power as their individual offices allow, Council of Five Governors work closely with London and the Crown, although some carry their own personal ambitions.\n\nAppointed in 1914 after the death of his father, George's appointment to Carnegia was largely the Queen's doing. Still mourning the death of yet another son, Victoria pushed to have George installed to keep him relatively close to Europe. This was both a pragmatic and emotional decision, as George would be one of the preferred heirs should the need arise. The prince would find it difficult to manage the affairs of the Saharan colony, particularly after the Fatimist Revolutions saw an influx of Spanish and Portuguese refugees. Exacerbating matters was his own son, Edward, who became a source of constant scandal within New Alexandria's elites for his parties and relations. Edward's unofficial exile would weigh heavy on George, and the stresses of helping manage the colony have lead to frequent illness."
+
+  CoF_Prince_Edward:0 "Governor General - Prince Edward"
 
   ##########################
   # OTHER
