--- a/localisation/english/PB_Tejas_l_english.yml
+++ b/localisation/english/PB_Tejas_l_english.yml
@@ -2,8 +2,16 @@
 
 ###################
 # EVENTS
-#################
+###################
 
   tejas.1.t:0 "Anglo Settler Uprising"
   tejas.1.d:0 ""
   tejas.1.a:0 "Well, if it's a fight they want, it's a fight they'll get!"
+
+###################
+# IDEAS
+###################
+PB_TEX_Between_Giants:0 "Between Giants"
+PB_TEX_The_Texan_Boom:0 "The Tejano Oil Boom"
+PB_TEX_the_settler_conflict:0 "The Settler Conflict"
+PB_TEX_pragmatic_president:0 "The Pragmatic President"
