--- a/localisation/english/PB_Automation_Crisis_l_english.yml
+++ b/localisation/english/PB_Automation_Crisis_l_english.yml
@@ -4,7 +4,7 @@
   # EVENTS
   ##########################
   AutoCrisis.1.t:0 "Edison Introduces Mining Androids"
-  AutoCrisis.1.d:0 "During a telescreen press conference earlier today, a representative of Edison Imperial Electric announced plans for new mining androids to be introduced across the British Isles. These androids, with minimal human involvement, will dramatically improve safety in mines by reducing the potential loss of human life. The droids operate through a series of remote wire networks that allow them to maintain power even deep undeground, dramatically reducing cost and upkeep.\n\nWhile the British Coal and Steel Corporation has not commented on the development, the English and Welsh Coalminers Unions have gone into uproar. They claim that these androids are little more than a cost-cutting retaliation by Edison Electric for last year's general strike. The WUP weighed in on the issue as well, claiming that these sorts of automation changes are increasingly threatening the jobs of the British people."
+  AutoCrisis.1.d:0 "During a telescreen press conference earlier today, a representative of Edison Imperial Electric announced plans for new mining androids to be introduced across the British Isles. These androids, with minimal human involvement, will dramatically improve safety in mines by reducing the potential loss of human life. The droids operate through a series of remote wire networks that allow them to maintain power even deep underground, dramatically reducing cost and upkeep.\n\nWhile the British Coal and Steel Corporation has not commented on the development, the English and Welsh Coalminers Unions have gone into uproar. They claim that these androids are little more than a cost-cutting retaliation by Edison Electric for last year's general strike. The WUP weighed in on the issue as well, claiming that these sorts of automation changes are increasingly threatening the jobs of the British people."
   AutoCrisis.1.a:0 "Keeping our good British workers safe."
 
   AutoCrisis.2.t:0 "Edison Electric Layoffs Abound"
@@ -12,7 +12,7 @@
   AutoCrisis.2.a:0 "Wait, hang on a second-"
 
   AutoCrisis.3.t:0 "Anti-Automation Riots in Cardiff"
-  AutoCrisis.3.d:0 "Anti-Automation Riots have begun to escalate across Wales, with the most intense being in the cities of Cardiff and Swansea. Rioters have been pillaging local shops and destroying any androids they can get their hands on. Even the augmented are under fire, and local constabulary have reported multiple assaults and even the murder of a veteran with an arm replacement.\n\nEmergency personnel in the area are being stretched thin and parliament is demanding we respond to the current circumstances. The local Home Guard garrison is available nearby and ready for deployment, but a military police action could cause more harm than good. Perhaps letting the riots fizzle out is the best option?"
+  AutoCrisis.3.d:0 "Anti-Automation Riots have begun to escalate across Wales, with the most intense being in the cities of Cardiff and Swansea. Rioters have been pillaging local shops and destroying any androids they can get their hands on. Even the augmented are under fire, and local constabulary have reported multiple assaults and even the murder of a veteran with an arm replacement.\n\nEmergency personnel in the area are being stretched thin and parliament is demanding we respond to the current circumstances. The local Home Guard garrison is available nearby and ready for deployment, but a military police action could do more harm than good. Perhaps letting the riots fizzle out is the best option?"
   AutoCrisis.3.a:0 "This is getting out of hand!"
   AutoCrisis.3.b:0 "Deploy the local garrison"
 
@@ -21,11 +21,11 @@
   AutoCrisis.4.a:0 "Perhaps we should have intervened."
 
   AutoCrisis.5.t:0 "Martial Law in Wales"
-  AutoCrisis.5.d:0 "Thanks to the Home Guard intervention in Wales, the rioting in Cardiff and Swansea have been brought under de-facto martial law. Home Guard troops continue to patrol the streets, supplemented by the local constabulary. Hardsuit troopers proved pivotal in pacifying the riots with minimum acceptable losses.\n\nWe face condenmnation from the British left, while the right supports the move. A mixed bag of a situation, and though anti-automation protests continue, Wales is under control for the moment."
+  AutoCrisis.5.d:0 "Thanks to the Home Guard intervention in Wales, the rioting in Cardiff and Swansea have been brought under de-facto martial law. Home Guard troops continue to patrol the streets, supplemented by the local constabulary. Hardsuit troopers proved pivotal in pacifying the riots with minimum acceptable losses.\n\nWe face condemnation from the British left, while the right supports the move. A mixed bag of a situation, and though anti-automation protests continue, Wales is under control for the moment."
   AutoCrisis.5.a:0 "Hooliganism will not be tolerated."
 
   AutoCrisis.6.t:0 "Taking Stock of the Damages"
-  AutoCrisis.6.d:0 "After an extensive audit, it's become clear that the Automation Crisis has heavily impacted the British country. The EIEC shutting down of mines across Southern England and Wales has caused a significant spike in unemployment, leading to protests and demands for action against the company.\n\nExacerbating matters is the general economic malaise the country has been experiencing for the last decade, as the shock of the coal shutdowns has caused an overall reduction in consumer spending. While not a full blown recession, it certainly means that our stagnant economy has degraded significantly even from just a few years ago."
+  AutoCrisis.6.d:0 "After an extensive audit, it's become clear that the Automation Crisis has heavily impacted the British economy. The EIEC shutting down of mines across Southern England and Wales has caused a significant spike in unemployment, leading to protests and demands for action against the company.\n\nExacerbating matters is the general economic malaise the country has been experiencing for the last decade, as the shock of the coal shutdowns has caused an overall reduction in consumer spending. While not a full blown recession, it certainly means that our stagnant economy has degraded significantly even from just a few years ago."
   AutoCrisis.6.a:0 "This is less than stellar."
 
   AutoCrisis.7.t:0 "Our Current Situation"
@@ -33,7 +33,7 @@
   AutoCrisis.7.a:0 "Not great, not terrible."
 
   AutoCrisis.8.t:0 "The EIEC Protests our Decision"
-  AutoCrisis.8.d:0 "We've received a lengthy protest from our affiliates in the EIEC, who significantly disgree with our decisions on how to handle the economic crisis. To further emphasize their displeasure, they've ordered a general slowdown on factory output for their holdings in Britain. While not a blatant threat, it's obvious they are displeased with us."
+  AutoCrisis.8.d:0 "We've received a lengthy protest from our affiliates in the EIEC, who significantly disagree with our decisions on how to handle the economic crisis. To further emphasize their displeasure, they've ordered a general slowdown on factory output for their holdings in Britain. While not a blatant threat, it's obvious they are displeased with us."
   AutoCrisis.8.a:0 "You'll get over it."
 
   AutoCrisis.9.t:0 "The EIEC Supports our Decision"
@@ -45,24 +45,22 @@
   AutoCrisis.10.a:0 "This should blow over with time."
 
   AutoCrisis.11.t:0 "The Turing Thinker Project"
-  AutoCrisis.11.d:0 "Under the patronage of the EIEC, we've established a project hub in London to assist a group of computing scientists. Headed by Alan Turing, the project's primary aim is the creation of a constructed intelligence that could help the government and military make decisions.\n\nNicknamed the Mechanical Turk, after the fake chess computer of the 1700s, the project's ambitions are extremely high. Experiments in constructed intelligence have yielded limited results in the past, stemming primarily from the inability to make thinking machines that can produce results not already programmed.\n\nTuring's project, however, aims to combine the burgeoning field of wetware computing with advances in machinery to produce an intelligent thinking device. Wetware is a very new field, pioneered over the last few years by growing animal neural tissue for processing."
+  AutoCrisis.11.d:0 "Under the patronage of the EIEC, we've established a project hub in London to assist a group of computing scientists. Headed by Alan Turing, the project's primary aim is to create a constructed intelligence that could help the government and military make decisions.\n\nNicknamed the Mechanical Turk, after the fake chess computer of the 1700s, the project's ambitions are extremely high. Experiments in constructed intelligence have yielded limited results in the past, stemming primarily from the inability to make thinking machines that can produce results not already programmed.\n\nTuring's project, however, aims to combine the burgeoning field of wetware computing with advances in machinery to produce an intelligent thinking device. Wetware is a very new field, pioneered over the last few years by growing animal neural tissue for processing."
   AutoCrisis.11.a:0 "We eagerly await the first report"
 
   AutoCrisis.12.t:0 "Turing Project Progress Report"
-  AutoCrisis.12.d:0 "We've received a new report from the Turing Thinker project. It seems that while there have been some setbacks, Turing's program is seeing some limited results through the combination of wired animal neural tissue and electrical impulses.\n\nThe project is still nowhere near ready, but their prototype shows significant promise in mimicking organic neural tissues."
+  AutoCrisis.12.d:0 "We've received a new report from the Turing Thinker project. It seems that while there have been some setbacks, Turing's program is seeing some limited results through the combination of animal neural tissue with electrical impulses.\n\nThe project is still nowhere near ready, but their prototype shows significant promise in mimicking organic neural tissues."
   AutoCrisis.12.a:0 "Interesting developments"
 
   AutoCrisis.13.t:0 "The Turing Project Continues"
-  AutoCrisis.13.d:0 "We've received a new report from the Turing Thinker project.\n\nThey've made a significant breakthrough by combining the lab grown tissues of a common octopus with electronic impulses, leading to a thinking device that can produce very limited punchcard results. It seems the unique neurological traits of molluscoid organisms, where the brain is decentralized, are much better suited to being used as machine neurotransmitters.\n\nStill, there remain problems, and the device is still too unwieldy and overheats too easily when provided higher level equations."
+  AutoCrisis.13.d:0 "We've received a new report from the Turing Thinker project.\n\nThey've made a significant breakthrough by combining the lab-grown tissues of a common octopus with electronic impulses, leading to a thinking device that can produce very limited punchcard results. It seems the unique neurological traits of molluscoid organisms, where the brain is decentralized, are much better suited to being used as machine neurotransmitters.\n\nStill, there remain problems, and the device is still too unwieldy and overheats too easily when provided higher level equations."
   AutoCrisis.13.a:0 "We need practical applications."
 
   AutoCrisis.14.t:0 "Turing Project Final Report"
-  AutoCrisis.14.d:0 "We've received a final from the Turing Thinker project.\n\nAfter working with Molluscoid neurological tissue and iterating on their designs, they have produced a man portable thinking device that can accomplish a number of higher level equations and even simulate small games through inserting and outputting punch cards.\n\nTuring demonstrated to the EIEC investment committee and the British investors how the machine could, with carefully tailored inputs, even play chess against a human.\n\nWhile groundbreaking, the device still has problems, and will need to be iterated on further before it can have practical civilian applications. Additionally, there have been several errors in the device caused by the aggregate growth of data overflow. In several cases, the device has produced nonsensical results or not produced results at all.\n\nTuring has been instructed to return to work, his budget significantly increased, and the device itself has been remanded to the British government for further study and iteration."
+  AutoCrisis.14.d:0 "We've received a final from the Turing Thinker project.\n\nAfter working with molluscoid neurological tissue and iterating on their designs, they have produced a man-portable thinking device that can accomplish a number of higher-level equations and even simulate small games by inserting and outputting punch cards.\n\nTuring demonstrated to the EIEC investment committee and the British investors how the machine could, with carefully tailored inputs, even play chess against a human.\n\nWhile groundbreaking, the device still has problems, and will need to be iterated on further before it can have practical civilian applications. Additionally, there have been several errors in the device caused by the aggregate growth of data overflow. In several cases, the device has produced nonsensical results or not produced results at all.\n\nTuring has been instructed to return to work, his budget significantly increased, and the device itself has been remanded to the British government for further study and iteration."
   AutoCrisis.14.a:0 "Further developments may take some time."
 
 
   ##########################
   # DECISIONS
   ##########################
-
-
