--- a/localisation/english/PB_BalkanWar_Events_l_english.yml
+++ b/localisation/english/PB_BalkanWar_Events_l_english.yml
@@ -1,4 +1,6 @@
-﻿l_english:
+﻿Here is the corrected loc with the changes made:
+
+l_english:
 
   ##########################
   # EVENTS
@@ -30,7 +32,7 @@
   balkwar.6.t:0 "The Balkans in Flames"
   balkwar.6.d:0 ""
   balkwar.6.a:0 "We will take back what is ours!"
-  balkwar.6.b:0 "Neutrality is its' own reward."
+  balkwar.6.b:0 "Neutrality is its own reward."
 
   balkwar.7.t:0 "The Balkans in Flames"
   balkwar.7.d:0 ""
@@ -92,7 +94,7 @@
 
   balkwar.20.t:0 "Victory in the Balkan War"
   balkwar.20.d:0 ""
-  balkwar.20.a:0 "The New Order rises!
+  balkwar.20.a:0 "The New Order rises!"
 
   balkwar.21.t:0 "Victory on the Romanian Front"
   balkwar.21.d:0 ""
