--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1326,22 +1326,22 @@
  SHX_cn_ADJ:0 "Chinese"
  SHX_an_ADJ:0 "Chinese"
 
- CHI_ni:0 "Empire of Great Qing"
- CHI_ni_DEF:0 "The Empire of Great Qing"
- CHI_ds:0 "Empire of Great Qing"
- CHI_ds_DEF:0 "The Empire of Great Qing"
- CHI_rc:0 "Empire of Great Qing"
- CHI_rc_DEF:0 "The Empire of Great Qing"
- CHI_an:0 "Empire of Great Qing"
- CHI_an_DEF:0 "The Empire of Great Qing"
- CHI_cn:0 "Empire of Great Qing"
- CHI_cn_DEF:0 "The Empire of Great Qing"
- CHI_lb:0 "Empire of Great Qing"
- CHI_lb_DEF:0 "The Empire of Great Qing"
- CHI_ss:0 "Empire of Great Qing"
- CHI_ss_DEF:0 "The Empire of Great Qing"
- CHI_jc:0 "Empire of Great Qing"
- CHI_jc_DEF:0 "The Empire of Great Qing"
+ CHI_ni:0 "Harmonious Empire of China"
+ CHI_ni_DEF:0 "The Harmonious Empire of China"
+ CHI_ds:0 "Harmonious Empire of China"
+ CHI_ds_DEF:0 "The Harmonious Empire of China"
+ CHI_rc:0 "Harmonious Empire of China"
+ CHI_rc_DEF:0 "The Harmonious Empire of China"
+ CHI_an:0 "Harmonious Empire of China"
+ CHI_an_DEF:0 "The Harmonious Empire of China"
+ CHI_cn:0 "Harmonious Empire of China"
+ CHI_cn_DEF:0 "The Harmonious Empire of China"
+ CHI_lb:0 "Harmonious Empire of China"
+ CHI_lb_DEF:0 "The Harmonious Empire of China"
+ CHI_ss:0 "Harmonious Empire of China"
+ CHI_ss_DEF:0 "The Harmonious Empire of China"
+ CHI_jc:0 "Harmonious Empire of China"
+ CHI_jc_DEF:0 "The Harmonious Empire of China"
  CHI_ni_ADJ:0 "Chinese"
  CHI_rc_ADJ:0 "Chinese"
  CHI_lb_ADJ:0 "Chinese"
@@ -1476,30 +1476,30 @@
  SIA_cn_ADJ:0 "Thai"
  SIA_an_ADJ:0 "Thai"
 
- MAN_ni:0 "Fengtien Clique"
- MAN_ni_DEF:0 "The Fengtien Clique"
- MAN_ds:0 "Fengtien Clique"
- MAN_ds_DEF:0 "The Fengtien Clique"
- MAN_rc:0 "Fengtien Clique"
- MAN_rc_DEF:0 "The Fengtien Clique"
- MAN_an:0 "Fengtien Clique"
- MAN_an_DEF:0 "The Fengtien Clique"
- MAN_cn:0 "Fengtien Clique"
- MAN_cn_DEF:0 "The Fengtien Clique"
- MAN_lb:0 "Fengtien Clique"
- MAN_lb_DEF:0 "The Fengtien Clique"
- MAN_ss:0 "Fengtien Clique"
- MAN_ss_DEF:0 "The Fengtien Clique"
- MAN_jc:0 "Fengtien Clique"
- MAN_jc_DEF:0 "The Fengtien Clique"
- MAN_ni_ADJ:0 "Manchurian"
- MAN_rc_ADJ:0 "Manchurian"
- MAN_lb_ADJ:0 "Manchurian"
- MAN_ss_ADJ:0 "Manchurian"
- MAN_jc_ADJ:0 "Manchurian"
- MAN_ds_ADJ:0 "Manchurian"
- MAN_cn_ADJ:0 "Manchurian"
- MAN_an_ADJ:0 "Manchurian"
+ MAN_ni:0 "Tsardom of Zheltorossiya"
+ MAN_ni_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_ds:0 "Tsardom of Zheltorossiya"
+ MAN_ds_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_rc:0 "Tsardom of Zheltorossiya"
+ MAN_rc_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_an:0 "Tsardom of Zheltorossiya"
+ MAN_an_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_cn:0 "Tsardom of Zheltorossiya"
+ MAN_cn_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_lb:0 "Tsardom of Zheltorossiya"
+ MAN_lb_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_ss:0 "Tsardom of Zheltorossiya"
+ MAN_ss_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_jc:0 "Tsardom of Zheltorossiya"
+ MAN_jc_DEF:0 "The Tsardom of Zheltorossiya"
+ MAN_ni_ADJ:0 "Zheltorossiyan"
+ MAN_rc_ADJ:0 "Zheltorossiyan"
+ MAN_lb_ADJ:0 "Zheltorossiyan"
+ MAN_ss_ADJ:0 "Zheltorossiyan"
+ MAN_jc_ADJ:0 "Zheltorossiyan"
+ MAN_ds_ADJ:0 "Zheltorossiyan"
+ MAN_cn_ADJ:0 "Zheltorossiyan"
+ MAN_an_ADJ:0 "Zheltorossiyan"
 
  KOR_ni:0 "Joseon Kingdom"
  KOR_ni_DEF:0 "The Joseon Kingdom"
@@ -1901,22 +1901,22 @@
  BCL_cn_ADJ:0 "British"
  BCL_an_ADJ:0 "British"
 
- ASK_ni:0 "Novorossiya"
- ASK_ni_DEF:0 "The Colony Novorossiya"
- ASK_ds:0 "Novorossiya"
- ASK_ds_DEF:0 "The Colony Novorossiya"
- ASK_rc:0 "Novorossiya"
- ASK_rc_DEF:0 "The Colony Novorossiya"
- ASK_an:0 "Novorossiya"
- ASK_an_DEF:0 "The Colony Novorossiya"
- ASK_cn:0 "Novorossiya"
- ASK_cn_DEF:0 "The Colony Novorossiya"
- ASK_lb:0 "Novorossiya"
- ASK_lb_DEF:0 "The Colony Novorossiya"
- ASK_ss:0 "Novorossiya"
- ASK_ss_DEF:0 "The Colony Novorossiya"
- ASK_jc:0 "Novorossiya"
- ASK_jc_DEF:0 "The Colony Novorossiya"
+ ASK_ni:0 "United Colonies of Russian America"
+ ASK_ni_DEF:0 "The Colony of Russian America"
+ ASK_ds:0 "United Colonies of Russian America"
+ ASK_ds_DEF:0 "The Colony of Russian America"
+ ASK_rc:0 "United Colonies of Russian America"
+ ASK_rc_DEF:0 "The Colony of Russian America"
+ ASK_an:0 "United Colonies of Russian America"
+ ASK_an_DEF:0 "The Colony of Russian America"
+ ASK_cn:0 "United Colonies of Russian America"
+ ASK_cn_DEF:0 "The Colony of Russian America"
+ ASK_lb:0 "United Colonies of Russian America"
+ ASK_lb_DEF:0 "The Colony of Russian America"
+ ASK_ss:0 "United Colonies of Russian America"
+ ASK_ss_DEF:0 "The Colony of Russian America"
+ ASK_jc:0 "United Colonies of Russian America"
+ ASK_jc_DEF:0 "The Colony of Russian America"
  ASK_ni_ADJ:0 "Alasko-Russian"
  ASK_rc_ADJ:0 "Alasko-Russian"
  ASK_lb_ADJ:0 "Alasko-Russian"
