--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -343,6 +343,14 @@
  VICTORY_POINTS_11159:1 "Petrosawodsk"
  VICTORY_POINTS_3187:1 "Sortavala"
  VICTORY_POINTS_110:1 "Waldai"
+ VICTORY_POINTS_187:1 "Bologoye"
+ VICTORY_POINTS_2999:1 "Vyshny Volochyok"
+ VICTORY_POINTS_6414:1 "Podolsk"
+ VICTORY_POINTS_301:1 "Balashikha"
+ VICTORY_POINTS_3259:1 "Khimki"
+ VICTORY_POINTS_6283:1 "Mytishchi"
+ VICTORY_POINTS_3391:1 "Odintsovo"
+ VICTORY_POINTS_11282:1 "Krasnogorsk"
  VICTORY_POINTS_9131:1 "Wologda"
  VICTORY_POINTS_3124:1 "Tscherepowez"
  VICTORY_POINTS_11234:1 "Velikiye Luki"
@@ -852,6 +860,8 @@
  VICTORY_POINTS_4745:0 "Hulunbuir"
  VICTORY_POINTS_12537:0 "Huzhong"
  VICTORY_POINTS_11752:0 "Zhangbei"
+ VICTORY_POINTS_9234:0 "Staraya Russa"
+ VICTORY_POINTS_11048:0 "Borovichi"
  VICTORY_POINTS_7418:0 "Xi'an"
  VICTORY_POINTS_4879:0 "Windhoek"
  VICTORY_POINTS_10472:0 "Kars"
