Small Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -1,17 +1,40 @@
 ﻿l_english:
 
   ##########################
+  # LEADERS
+  ##########################
+
+  POLITICS_Philipp_Bouhler_DESC:0 "§YBorn:§!03/06/1896\n\n§YPhilipp Bouhler§! nicknamed the counsellor (§ODer Berater§!) has seen Prussia rise from the ashes as a rebirthed nation under Russian influence. A once simple farm boy turned solider during the great war he has seen the world at its quietest and loudest moments, serving in the Russian 3rd cavalry regiment. A regiment compromised of a Prussian majority that would soon turn against their forefathers in the Prussian war for independence during 1921. A war that proved successful in establishing a independent Prussia of sorts, heavily monitored by the Tsar's right hand.\n\nOriginally a fierce supporter of the democratic republic he soon saw through their antics and gained power through a bloody battle in Königsberg that lasted no longer than two days. Russia, meanwhile, looked with great interest towards Bouhler seeing him as a leader who aligned more towards their views and a possible proponent for a more Russian dominated Prussia. Secretly funding him and his Vaterland Front."
+
+  ##########################
   # TRAITS
   ##########################
 
   PB_Der_Berater:0 "Der Berater"
+  PB_Der_Berater_2:0 "Der Berater"
   trait_PRS_Junker_Aristocracy:0 "Junker Aristocracy"
   trait_PRS_Junker_Aristocracy_desc:0 "This individual is a member of the Junker aristocracy, they have earned their position in the Prussian military not by hardwork, but by blood."
 
+  ##########################
+  # TOOLTIPS
+  ##########################
+
+  PB_PRS_Prussian_Hydra_tt:0 "\n§gShould the timer tick down to zero the Prussian nobility will secure control of the state and the Junkers will become the ruling party.§!"
+
+  ##########################
+  # MECHANICS
+  ##########################
+
+  PB_PRS_Matters_Of_The_State:0 "Matters Of The State"
+  PB_PRS_Matters_Of_The_State_desc:0 "\n\n\n\n\n\nThe Independent State Of Prussia has come a long way since its war of independence against the Russian Empire, yet despite the progress we have made it advancing the capabilities of the state and it's peoples there is still much work to be done."
+  PRS_Impending_Royal_Coup:0 "Impending Royal Coup"
 
   ##########################
   # IDEAS
   ##########################
+
+  PB_Living_Under_Germanys_Shadow:0 "Living Under Germany's Shadow"
+  PB_Living_Under_Germanys_Shadow_desc:0 "Prussia has remained for much of it's history as the "little brother" to the once then prestigious Austrian Empire, being seen as the less incapable nation of the two and always being two steps behind in terms of industrial capability and societal development. This has remained true for most of modern history, becoming more apparent with the Empire effectively becoming the European hegemony post Great War. Though Europe is a far different place, the circumstances that allowed the Austrians to grow cannot be replicated in todays climate. Alternative options such as Neo-Imperialism are the only choice if one seeks to expand, an option not open to the United Kingdoms Of Germany."
   
   PB_PRS_Prussonationalism:0 "Prussonationalism"
   PB_PRS_Prussonationalism_desc:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
@@ -131,3 +154,42 @@
   PB_PRS_Fund_The_German_Brownshirts_desc:0 ""
   PB_PRS_Agitate_The_German_Socialists:0 "Agitate The German Socialists"
   PB_PRS_Agitate_The_German_Socialists_desc:0 ""
+  PB_PRS_The_Posen_Issue:0 "The Posen Issue"
+  PB_PRS_The_Posen_Issue_desc:0 ""
+  PB_PRS_Bread_And_Circuses:0 "Bread And Circuses"
+  PB_PRS_Bread_And_Circuses_desc:0 ""
+  PB_PRS_Cultural_Integration_Programs:0 "Cultural Integration Programs"
+  PB_PRS_Cultural_Integration_Programs_desc:0 ""
+  PB_PRS_Attempt_A_Compromise_With_Warsaw:0 "Attempt A Compromise With Warsaw"
+  PB_PRS_Attempt_A_Compromise_With_Warsaw_desc:0 ""
+  PB_PRS_Divide_Et_Impera:0 "Divide Et Impera"
+  PB_PRS_Divide_Et_Impera_desc:0 ""
+  PB_PRS_Our_Last_Frontier:0 "Our Last Frontier"
+  PB_PRS_Our_Last_Frontier_desc:0 ""
+  PB_PRS_Develop_The_Posen_Steelworks:0 "Develop The Posen Steelworks"
+  PB_PRS_Develop_The_Posen_Steelworks_desc:0 ""
+  PB_PRS_The_Last_Of_The_Nobility:0 "The Last Of The Nobility"
+  PB_PRS_The_Last_Of_The_Nobility_desc:0 ""
+  PB_PRS_Anti_Monarch_Propoganda:0 "Anti-Monarch Propoganda"
+  PB_PRS_Anti_Monarch_Propoganda_desc:0 ""
+  PB_PRS_Ideology_Above_Identity:0 "Ideology Above Identity"
+  PB_PRS_Ideology_Above_Identity_desc:0 ""
+  PB_PRS_Liquidate_The_Princes:0 "Liquidate The Princes"
+  PB_PRS_Liquidate_The_Princes_desc:0 ""
+  PB_PRS_The_Sins_Of_Dynasty:0 "The Sins Of Dynasty"
+  PB_PRS_The_Sins_Of_Dynasty_desc:0 ""
+  PB_PRS_The_Last_King_Of_Prussia:0 "The Last King Of Prussia"
+  PB_PRS_The_Last_King_Of_Prussia_desc:0 ""
+  PB_PRS_Reappeal_Aristocratic_Benefits:0 "Reappeal Aristocratic Benefits"
+  PB_PRS_Reappeal_Aristocratic_Benefits_desc:0 ""
+
+  ##########################
+  # EVENTS
+  ##########################
+
+  Prussian.1.t:0 "Prussia Requests Entry Into The Pacte"
+  Prussian.1.d:0 "The Prussian delegation in Paris today requested the states officialy entry into the Pacte Revanchiste. Diplomatic relations have been steadily improving in recent months and there is little to no reason to reject such a friendly request." 
+  Prussian.1.a:0 "France Welcomes All With Open Arms."
+  Prussian.2.t:0 "France Accepts Us Into The Pacte"
+  Prussian.2.d:0 "Paris has welcomed us as the newest memeber in the Pacte Revanchiste today. Already new diplomatic channels are being set up so that we can make the most of this situation. Prussia has as of now thrown off the yoke of Russian imperialism and found a new ally that truelly cares about the struggle of the Prussian people." 
+  Prussian.2.a:0 "Europe will tremble under an iron boot."
