a bit more love to the Finland War

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -720,7 +720,7 @@
  STATE_719:0 "Natal"
  STATE_720:0 "South Georgia"
  STATE_721:0 "Australian Timor"
- STATE_722:0 "Petsamo"
+ STATE_722:0 "Pechenga"
  STATE_723:0 "South Island"
  STATE_724:0 "Tenasserim"
  STATE_725:0 "Nauru"
