--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -383,22 +383,22 @@
   FST_rc_party:0 "-"
   FST_rc_party_long:0 "-"
 
-  HOL_cn_party_long:0 "Anti-Revolutionaire Partij"
-  HOL_cn_party:0 "ARP"
-  HOL_ss_party_long:0 "Sociaal-Democratische Arbeiderspartij"
-  HOL_ss_party:0 "SDAP"
-  HOL_lb_party_long:0 "Vrijzinnige Bond"
-  HOL_lb_party:0 "VB"
-  HOL_jc_party_long:0 "Verlichte Jacobijnen Partij"
-  HOL_jc_party:0 "VJP"
-  HOL_rc_party_long:0 "Staatkundig Gereformeerde Partij"
-  HOL_rc_party:0 "SGP"
-  HOL_ni_party_long:0 "Dietsche Actualisten Partij"
-  HOL_ni_party:0 "DAP"
-  HOL_ds_party_long:0 "Dietsche Leger"
-  HOL_ds_party:0 "DL"
-  HOL_an_party_long:0 "Middenstand Belangen Partij"
-  HOL_an_party:0 "MBP"
+  HOL_cn_party_long:0 "Christelijk-Democratische Unie"
+  HOL_cn_party:0 "CDU"
+  HOL_ss_party_long:0 "Sociaal-Democratische Partij"
+  HOL_ss_party:0 "SDP"
+  HOL_lb_party_long:0 "Liberale Unie"
+  HOL_lb_party:0 "LU"
+  HOL_jc_party_long:0 "Revolutionair-Socialistische Arbeiderspartij"
+  HOL_jc_party:0 "RSAP"
+  HOL_rc_party_long:0 "Alliantie van Nationale Wederopbouw"
+  HOL_rc_party:0 "AvNW"
+  HOL_ni_party_long:0 "Nieuwe Nassau Partij"
+  HOL_ni_party:0 "NNP"
+  HOL_ds_party_long:0 "Nationale Beweging"
+  HOL_ds_party:0 "NB"
+  HOL_an_party_long:0 "Vrijzinnig-Democratische Bond"
+  HOL_an_party:0 "VDB"
 
   BRT_ss_party_long:0 "Strollad Emrenerien Vreiz"
   BRT_ss_party:0 "SEV"
