A bunch of bugfixes ( Support and Teslar Towers )

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -599,6 +599,13 @@ MANPOWER_REINFORCEMENT_NOT_POSSIBLE:0 "§RManpower reinforcement is not possible
 ARCHETYPE_DESC_ENTRY:0 "    - $COUNT|0$ $NAME|H$"
 OUTDATED_EQ:1 "Show §Houtdated equipment§!"
 
+ motorized_rocket_equipment:0 "Motorized Rocket Artillery"
+ motorized_rocket_equipment_short:0 "Mot. R. Artillery"
+ motorized_rocket_equipment_desc:0 "Multiple rocket launchers such as these deliver explosives to a target area more quickly than conventional artillery, but with lower accuracy and requiring a longer time to reload. Being mounted on trucks, this version is able to launch attacks and change positions before the enemy can return fire."
+
+ motorized_rocket_equipment_1:0 "Motorized Rocket Artillery"
+ motorized_rocket_equipment_1_short:0 "Mot. R. Artillery"
+ motorized_rocket_equipment_1_desc:0 "Multiple rocket launchers such as these deliver explosives to a target area more quickly than conventional artillery, but with lower accuracy and requiring a longer time to reload. Being mounted on trucks, this version is able to launch attacks and change positions before the enemy can return fire."
 
  floating_harbor_equipment:0 "Floating Harbor"
  floating_harbor_equipment_desc:1 "A series of pontoons and pre-fabricated concrete structures that can be moved across water and assembled within hours to create a sheltered landing space to unload supplies."
