--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -12,6 +12,9 @@
 
   PB_Der_Berater:0 "Der Berater"
   PB_Der_Berater_2:0 "Der Berater"
+  PB_Der_Berater_3:0 "Der Berater"
+  PB_Der_Berater_4:0 "Der Berater"
+  PB_Der_Berater_5:0 "Der Berater"
   trait_PRS_Junker_Aristocracy:0 "Junker Aristocracy"
   trait_PRS_Junker_Aristocracy_desc:0 "This individual is a member of the Junker aristocracy, they have earned their position in the Prussian military not by hardwork, but by blood."
 
@@ -20,6 +23,10 @@
   ##########################
 
   PB_PRS_Prussian_Hydra_tt:0 "\n§gShould the timer tick down to zero the Prussian nobility will secure control of the state and the Junkers will become the ruling party.§!"
+  Reactionary_Theorists_tt:0 "Should this nation agree we will recieve §G+50§! political power, and we have a 33% chance of getting either 10 army, navy, or air experience."
+  PB_PRS_Europes_Reactionary_Bastion_tt:0 "\n§gAllows for the invitation of other European far-right theorists granting Prussia some additional political power and army, navy, and air experience.§!"
+  PB_PRS_Attempt_A_Compromise_With_Warsaw_tt:0 "\n§gShould Poland agree to our compromise a population exchange will happen in Posen, Polish citizens will be allowed to leave the state freely and Germans living in Poland will be allowed to move to Posen. Poland will loose their core on Posen but will retain their claim on the state.§!"
+  PB_PRS_Liquidate_The_Princes_tt:0 "Every unit leader that has the trait §HJunker Aristocracy§! will be §Rpurged§! "
 
   ##########################
   # MECHANICS
@@ -28,6 +35,11 @@
   PB_PRS_Matters_Of_The_State:0 "Matters Of The State"
   PB_PRS_Matters_Of_The_State_desc:0 "\n\n\n\n\n\nThe Independent State Of Prussia has come a long way since its war of independence against the Russian Empire, yet despite the progress we have made it advancing the capabilities of the state and it's peoples there is still much work to be done."
   PRS_Impending_Royal_Coup:0 "Impending Royal Coup"
+  PRS_Strengthen_Prussonationalism:0 "Strengthen Prussonationalism"
+  PRS_Invite_Spanish_Reactionary_Theorists:0 "Invite Spanish Reactionary Theorists"
+  PRS_Invite_French_Reactionary_Theorists:0 "Invite French Reactionary Theorists"
+  PRS_Invite_Italian_Reactionary_Theorists:0 "Invite Italian Reactionary Theorists"
+  PRS_Invite_Russian_Reactionary_Theorists:0 "Invite Russian Reactionary Theorists"
 
   ##########################
   # IDEAS
@@ -39,17 +51,17 @@
   PB_PRS_Prussonationalism:0 "Prussonationalism"
   PB_PRS_Prussonationalism_desc:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
 
-  PB_PRS_Prussonationalism2:0 "Prussonationalism"
-  PB_PRS_Prussonationalism2_desc:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
+  PB_PRS_Prussonationalism_2:0 "Prussonationalism"
+  PB_PRS_Prussonationalism_2:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
 
-  PB_PRS_Prussonationalism3:0 "Prussonationalism"
-  PB_PRS_Prussonationalism3_desc:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
+  PB_PRS_Prussonationalism_3:0 "Prussonationalism"
+  PB_PRS_Prussonationalism_3:0 "Prussonationalism is a unique form of ultranationalist doctrine birthed in Prussia in the aftermath of the Revolutions of the 1920s. In many ways, it is a synthesis of traditional Prussian martial values with modern far-right economic doctrine. The ideology primarily pushes for extreme ultra-traditionalism and anti-leftism, though conversely retaining a sort of ethnic pluralism to keep the not inconsiderable Polish, Russian and Baltic minorities from revolt."
  
   PB_PRS_Junker_Reliance:0 "Reliance on the Junkers"
   PB_PRS_Junker_Reliance_desc:0 "Prussia's government is blatantly oligarchic, even at the best of times. Even during the brief period of democracy, the State Diets were forced to make major concessions to the Junkers, Prussia's landed aristocracy. Despite the end of the monarchy, much of the country's agriculture and industry is owned by these aristocratic estates. Exacerbating the issue is that many of the country's major military leaders descend from the Junker elite. Should Bouhler lose the trust of the Junkers, they may attempt to overthrow him."
 
-  PB_PRS_Junker_Reliance2:0 "Reliance on the Junkers"
-  PB_PRS_Junker_Reliance2_desc:0 "Prussia's government is blatantly oligarchic, even at the best of times. Even during the brief period of democracy, the State Diets were forced to make major concessions to the Junkers, Prussia's landed aristocracy. Despite the end of the monarchy, much of the country's agriculture and industry is owned by these aristocratic estates. Exacerbating the issue is that many of the country's major military leaders descend from the Junker elite. Should Bouhler lose the trust of the Junkers, they may attempt to overthrow him."
+  PB_PRS_Junker_Reliance_2:0 "Reliance on the Junkers"
+  PB_PRS_Junker_Reliance_2_desc:0 "Prussia's government is blatantly oligarchic, even at the best of times. Even during the brief period of democracy, the State Diets were forced to make major concessions to the Junkers, Prussia's landed aristocracy. Despite the end of the monarchy, much of the country's agriculture and industry is owned by these aristocratic estates. Exacerbating the issue is that many of the country's major military leaders descend from the Junker elite. Should Bouhler lose the trust of the Junkers, they may attempt to overthrow him."
 
   PB_PRS_Russian_Minority:0 "Significant Russian Minority"
   PB_PRS_Russian_Minority_desc:0 "Prussia's time as a de-facto part of the Russian Empire has lead to a dramatic shift in the nation's demographics. Though the Germans retain a general majority, the settlement of Russians was commonplace up until the 1920 Nationalist Revolutions in Eastern Europe. Due to this, there is a vocal portion of the population advocating for Prussia's return to the Russian Empire. These Russophile elements of Prussian society, if empowered, would likely see Prussia fully return to Russia's embrace. On the inverse, dealing with them is problematic, as disempowering a Russian minority on the border with Russia would likely be unhealthy for the nation's leadership..."
@@ -180,8 +192,8 @@
   PB_PRS_The_Sins_Of_Dynasty_desc:0 ""
   PB_PRS_The_Last_King_Of_Prussia:0 "The Last King Of Prussia"
   PB_PRS_The_Last_King_Of_Prussia_desc:0 ""
-  PB_PRS_Reappeal_Aristocratic_Benefits:0 "Reappeal Aristocratic Benefits"
-  PB_PRS_Reappeal_Aristocratic_Benefits_desc:0 ""
+  PB_PRS_Seize_Royal_Wealth:0 "Seize Royal Wealth"
+  PB_PRS_Seize_Royal_Wealth_desc:0 ""
 
   ##########################
   # EVENTS
@@ -193,3 +205,17 @@
   Prussian.2.t:0 "France Accepts Us Into The Pacte"
   Prussian.2.d:0 "Paris has welcomed us as the newest memeber in the Pacte Revanchiste today. Already new diplomatic channels are being set up so that we can make the most of this situation. Prussia has as of now thrown off the yoke of Russian imperialism and found a new ally that truelly cares about the struggle of the Prussian people." 
   Prussian.2.a:0 "Europe will tremble under an iron boot."
+  Prussian.3.t:0 "Prussia Reqeuests Reactionary Theorists"
+  Prussian.3.d:0 "The Independent State of Prussia has requested that a handful of our reactionary acedemics be transfered to their nation. All costs, both wages and transport flights will be fully covered by the Prussian state. The call is completely on us to make and we have every reason to reject such a request." 
+  Prussian.3.a:0 "Our acedemics aren't for sale."
+  Prussian.3.b:0 "Anything to further the reactionary cause."
+  Prussian.4.t:0 "Posen In Flames"
+  Prussian.4.d:0 "" 
+  Prussian.4.a:0 "This can't be good."
+  Prussian.5.t:0 "Prussia Attempts A Compromise"
+  Prussian.5.d:0 "" 
+  Prussian.5.a:0 "Posen is Polish."
+  Prussian.5.b:0 "Something is better than nothing."
+  Prussian.6.t:0 "End Of The Posen Crisis"
+  Prussian.6.d:0 "" 
+  Prussian.6.a:0 "Finally."
