--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -56,7 +56,7 @@
  VICTORY_POINTS_3320:0 "Wilno"
  VICTORY_POINTS_3392:0 "Brzesc Litewski"
  VICTORY_POINTS_3393:0 "Grodno"
- VICTORY_POINTS_6558:0 "Posen"
+ VICTORY_POINTS_6558:0 "Poznań"
  VICTORY_POINTS_9508:0 "Lodz"
  VICTORY_POINTS_11479:0 "Lwow"
  VICTORY_POINTS_11666:0 "Vienna"
