--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -26,7 +26,8 @@
   Reactionary_Theorists_tt:0 "Should this nation agree we will recieve §G+50§! political power, and we have a 33% chance of getting either 10 army, navy, or air experience."
   PB_PRS_Europes_Reactionary_Bastion_tt:0 "\n§gAllows for the invitation of other European far-right theorists granting Prussia some additional political power and army, navy, and air experience.§!"
   PB_PRS_Attempt_A_Compromise_With_Warsaw_tt:0 "\n§gShould Poland agree to our compromise a population exchange will happen in Posen, Polish citizens will be allowed to leave the state freely and Germans living in Poland will be allowed to move to Posen. Poland will loose their core on Posen but will retain their claim on the state.§!"
-  PB_PRS_Liquidate_The_Princes_tt:0 "Every unit leader that has the trait §HJunker Aristocracy§! will be §Rpurged§! "
+  PB_PRS_Liquidate_The_Princes_tt:0 "Every unit leader that has the trait §HJunker Aristocracy§! will be §Rpurged§!"
+  PB_PRS_Ideology_Above_Identity_tt:0 "The §HBattalion of Free Imperials§! will be raised, comprised of British §gneo-imperialist§! defectors"
 
   ##########################
   # MECHANICS
@@ -182,8 +183,8 @@
   PB_PRS_Develop_The_Posen_Steelworks_desc:0 ""
   PB_PRS_The_Last_Of_The_Nobility:0 "The Last Of The Nobility"
   PB_PRS_The_Last_Of_The_Nobility_desc:0 ""
-  PB_PRS_Anti_Monarch_Propoganda:0 "Anti-Monarch Propoganda"
-  PB_PRS_Anti_Monarch_Propoganda_desc:0 ""
+  PB_PRS_Anti_Monarch_Stance:0 "Anti-Monarch Stance"
+  PB_PRS_Anti_Monarch_Stance_desc:0 ""
   PB_PRS_Ideology_Above_Identity:0 "Ideology Above Identity"
   PB_PRS_Ideology_Above_Identity_desc:0 ""
   PB_PRS_Liquidate_The_Princes:0 "Liquidate The Princes"
@@ -219,3 +220,6 @@
   Prussian.6.t:0 "End Of The Posen Crisis"
   Prussian.6.d:0 "" 
   Prussian.6.a:0 "Finally."
+  Prussian.7.t:0 "The Last King Of Prussia"
+  Prussian.7.d:0 "" 
+  Prussian.7.a:0 "Off with their head!"
