--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -168,27 +168,27 @@
   PB_PRS_Agitate_The_German_Socialists:0 "Agitate The German Socialists"
   PB_PRS_Agitate_The_German_Socialists_desc:0 ""
   PB_PRS_The_Posen_Issue:0 "The Posen Issue"
-  PB_PRS_The_Posen_Issue_desc:0 ""
+  PB_PRS_The_Posen_Issue_desc:0 "Now that we have returned to relative stability within the government, we can start the purification process of the nation. Which in this case means the crushing of the plaguey Polish insurgents in Posen. If we don't take control of Posen now, we might never fully integrate it into Prussia proper."
   PB_PRS_Bread_And_Circuses:0 "Bread And Circuses"
-  PB_PRS_Bread_And_Circuses_desc:0 ""
+  PB_PRS_Bread_And_Circuses_desc:0 "In order to not miserably fail at our attempts to integrate Posen, we have to invest and develop the province to please the native Poles and not anger them even more. We will invest in the agricultural sector and in the infastructure of the province."
   PB_PRS_Cultural_Integration_Programs:0 "Cultural Integration Programs"
-  PB_PRS_Cultural_Integration_Programs_desc:0 ""
+  PB_PRS_Cultural_Integration_Programs_desc:0 "The Poles have shown they are willing to cooperate somewhat, so the government has decided to hasten the 'purification' process through Prussian 'education' and social programs to purify the Poles and make them Prussians."
   PB_PRS_Attempt_A_Compromise_With_Warsaw:0 "Attempt A Compromise With Warsaw"
-  PB_PRS_Attempt_A_Compromise_With_Warsaw_desc:0 ""
+  PB_PRS_Attempt_A_Compromise_With_Warsaw_desc:0 "With our recent actions in the Polish territories, some in the government have protested against our actions and have come up with a solution. They mentioned that seeing as we have such good relations with the Russian empire and their sattelite states, they propose we simply work with the autonomous Polish government to exchange populations. They receive poles, we receive Prussians. This is step in the right direction for Polish-Prussian relations."
   PB_PRS_Divide_Et_Impera:0 "Divide Et Impera"
-  PB_PRS_Divide_Et_Impera_desc:0 ""
+  PB_PRS_Divide_Et_Impera_desc:0 "The population exchanges were a big succsess and has caused the population structure of Posen to radically change from about 40% Prussian to 72% Prussian. Because of these changes, the government has decided to revoke Posen's autonomous status, as the population of it is now more Prussian."
   PB_PRS_Our_Last_Frontier:0 "Our Last Frontier"
-  PB_PRS_Our_Last_Frontier_desc:0 ""
+  PB_PRS_Our_Last_Frontier_desc:0 "After many changes in policy in regards to Posen, we have finally succeeded in our efforts to integrate the province, the Poles are gone and it is all truly Prussia. No more distinction between it and the rest of Prussia. Poznań is Posen once more."
   PB_PRS_Develop_The_Posen_Steelworks:0 "Develop The Posen Steelworks"
-  PB_PRS_Develop_The_Posen_Steelworks_desc:0 ""
+  PB_PRS_Develop_The_Posen_Steelworks_desc:0 "Posen is now truly Prussian and desevres as much attention as any other province of Prussia, meaning a newly founded commission will assure that the budget assigned to Posen will be used to develop the region thoroughly. Starting by increasing the synthetic material output of the province as it lays profitable for railroad based export."
   PB_PRS_The_Last_Of_The_Nobility:0 "The Last Of The Nobility"
-  PB_PRS_The_Last_Of_The_Nobility_desc:0 ""
+  PB_PRS_The_Last_Of_The_Nobility_desc:0 "The Prussian nobility that has been in Prussia since the medieval times, have for a long time now been hampering the progression of the Prussian state. Thus with a renewed reformist spirit, these rich barons and dukes will be dealt with and their lands seized."
   PB_PRS_Anti_Monarch_Stance:0 "Anti-Monarch Stance"
-  PB_PRS_Anti_Monarch_Stance_desc:0 ""
+  PB_PRS_Anti_Monarch_Stance_desc:0 "Although the Russian monarch is guaranteeing our indepedence we do not in any way agree with the system of monarchism, especially not that of Britain. The monarch has no power and serves no purpose but to be a waste of money, resources and to hold up an old and outdated system of ruling and should have been removed for good during the Cromwellian time. Thus Prussia fights to rid the world of monarchism."
   PB_PRS_Ideology_Above_Identity:0 "Ideology Above Identity"
   PB_PRS_Ideology_Above_Identity_desc:0 ""
   PB_PRS_Liquidate_The_Princes:0 "Liquidate The Princes"
-  PB_PRS_Liquidate_The_Princes_desc:0 ""
+  PB_PRS_Liquidate_The_Princes_desc:0 "The Prussian nobles have gathered in Königsberg for a supposed 're-organisation' of the Prussian provinces. But obviously they have not been called here for any such things, they are here too be illuminated and dealt with. Thus when they were all gathered within the dining room of a government building, they were all shot by army soldiers and the bodies disposed off in the sewers. No longer will they stand in the way of progress."
   PB_PRS_The_Sins_Of_Dynasty:0 "The Sins Of Dynasty"
   PB_PRS_The_Sins_Of_Dynasty_desc:0 ""
   PB_PRS_The_Last_King_Of_Prussia:0 "The Last King Of Prussia"
