small loc fix nr. 3021

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -239,8 +239,8 @@
  HOL_lb_DEF:0 "Republic Of The Netherlands"
  HOL_ss:0 "Republic Of The Netherlands"
  HOL_ss_DEF:0 "Republic Of The Netherlands"
- HOL_jc:0 "Social Republic Of The Netherlands"
- HOL_jc_DEF:0 "Social Republic Of The Netherlands"
+ HOL_jc:0 "Union Republic Of The Netherlands"
+ HOL_jc_DEF:0 "Union Of The Netherlands"
  HOL_ni_ADJ:0 "Dutch"
  HOL_rc_ADJ:0 "Dutch"
  HOL_lb_ADJ:0 "Dutch"
